tests/experimental/error/function_no_arrow_in_body.lus
-- Illegal `->` in function.
function blah ( in: int ) returns ( out: int ) ;
let
  out = 0 -> in ;
tel
